--- a/.github/AL-Go-Settings.json
+++ b/.github/AL-Go-Settings.json
@@ -4,5 +4,7 @@
   "templateSha": "c62bf167f8c516d997bed1ed600a9d03d5093ad5",
   "useCompilerFolder": true,
   "doNotPublishApps": true,
-  "generateDependencyArtifact": true
+  "generateDependencyArtifact": true,
+  "runs-on": "ubuntu-latest",
+  "githubRunner": "ubuntu-latest"
 }
