--- a/MyApp/app.json
+++ b/MyApp/app.json
@@ -22,6 +22,12 @@
           "name":  "Licensing",
           "publisher":  "Freddy",
           "version":  "3.0.0.0"        
+      },
+      {
+          "id":  "8481ebd7-8c18-481c-8783-1076335a8b92",
+          "name":  "DocumentHandling",
+          "publisher":  "Abakion",
+          "version":  "25.0.0.0"        
       }
   ],
   "screenshots": [],
