--- a/MyApp/app.json
+++ b/MyApp/app.json
@@ -28,6 +28,12 @@
           "name":  "DocumentHandling",
           "publisher":  "Abakion",
           "version":  "25.0.0.0"        
+      },
+      {
+          "id":  "2156302a-872f-4568-be0b-60968696f0d5",
+          "name":  "AI Test Toolkit",
+          "publisher":  "Microsoft",
+          "version":  "25.0.0.0"        
       }
   ],
   "screenshots": [],
